--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,7 @@ ul.recipe-list {
 
 .portion {
   appearance: none;
-  border: 1px solid #aaa;
+  border: 1px solid transparent;
   outline: none;
   background: transparent;
   font-weight: 700;
@@ -91,7 +91,10 @@ ul.recipe-list {
     background-color: #eee;
   }
 
-  &.activePortion { opacity: 1; }
+  &.activePortion {
+    opacity: 1;
+    border-color: #bbb;
+  }
 }
 
 .whatBlock, .howBlock {
